feat: optimisation et tests de la fonctionnalite evenements
